[tool.poetry]
name = "accfix"
version = "0.1.0"
description = "EPUB accessibility fixer"
authors = ["Titusz <tp@py7.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
poethepoet = "^0.25"

[tool.ruff]
line-length = 100

[tool.poe.tasks]
format-code = { cmd = "poetry run ruff format", help = "Code style formating with ruff" }
all = ["format-code"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
