[tool.poetry]
name = "accfix"
version = "0.1.0"
description = "Automated accessibility fixes for EPUB"
authors = ["Titusz <tp@py7.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.2"
lingua-language-detector = "^2.0"
streamlit = "^1.35"
loguru = "^0.7"
python-telegram-bot = "^21.5"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
poethepoet = "^0.25"

[tool.ruff]
line-length = 100

[tool.poe.tasks]
format-code = { cmd = "poetry run ruff format", help = "Code style formating with ruff" }
convert-lf = { script = "accfix.dev:convert_lf", help = "Convert line endings to LF"}
all = ["format-code", "convert-lf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
